fix title letter spacing being overwritten

--- a/styleguide_assets/aigis_assets/styles/theme.css
+++ b/styleguide_assets/aigis_assets/styles/theme.css
@@ -52,6 +52,7 @@
 .aigis-module > h3,
 .aigis-module > h4 {
 	text-transform: none;
+	letter-spacing: normal;
 	font-family: "Open Sans", "Helvetica Neue", Helvetica, arial, sans-serif;
 
 	text-rendering: optimizeLegibility;
